# claude-terminal

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json
.claude/agents/: frontend-reviewer.md  ipc-checker.md  rust-reviewer.md
.claude/commands/: add-command.md  add-component.md  changelog.md  dev.md  publish.md  review-pr.md
.github/workflows/: release.yml
docs/: AUTO_UPDATE.md
src/: App.tsx  changelog.json  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  database.rs  main.rs  terminal.rs
src/components/: AutoUpdater.tsx  CommandPalette.tsx  FileChangesPanel.tsx  HintsPanel.tsx  NewTerminalModal.tsx  OrchestrationPanel.tsx  ProfileModal.tsx  SessionHistory.tsx  SettingsModal.tsx  SetupWizard.tsx  Sidebar.tsx  SnippetsModal.tsx  SplitView.tsx  TerminalGrid.tsx  TerminalSearch.tsx  TerminalTabs.tsx  TerminalView.tsx  TitleBar.tsx  WhatsNewModal.tsx  WorkspaceModal.tsx
src/hooks/: useKeyboardShortcuts.ts  useNotification.ts
src/store/: appStore.ts  terminalStore.ts  updaterStore.ts
