[package]
name = "claude-terminal"
version = "1.5.5"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
notify-rust = "4"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
opt-level = "z"
strip = true
