[package]
name = "claude-terminal"
version = "1.12.0"
edition = "2021"

[features]
default = []
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
notify-rust = "4"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
open = "5"
strip-ansi-escapes = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
opt-level = "z"
strip = true
